Bug 1599901 - Adjusted Triplet card icon sizes and spacing. r=k88hudson
Differential Revision: https://phabricator.services.mozilla.com/D55176

--- a/browser/components/newtab/content-src/asrouter/templates/Trailhead/_Trailhead.scss
+++ b/browser/components/newtab/content-src/asrouter/templates/Trailhead/_Trailhead.scss
@@ -265,7 +265,11 @@
   box-shadow: var(--newtab-card-shadow);
 
   font-size: 13px;
-  padding: 20px;
+  padding: 20px 40px 60px;
+
+  @media (max-width: 865px) {
+    padding: 20px 40px;
+  }
 
   @media (min-width: $break-point-widest) {
     font-size: 15px;
